--- a/models/marts/attendance/attendance.yml
+++ b/models/marts/attendance/attendance.yml
@@ -11,12 +11,12 @@ models:
             - student_key
             - date
     columns:
-      - name: local_education_agency_key
-        description: Foreign key to `dim_local_education_agency`
+      - name: lea_key
+        description: Foreign key to `dim_lea`
         tests:
           - relationships:
-              to: ref('dim_local_education_agency')
-              field: local_education_agency_key
+              to: ref('dim_lea')
+              field: lea_key
 
       - name: school_key
         description: Foreign key to `dim_school`
